--- a/main.css
+++ b/main.css
@@ -5,6 +5,10 @@
 2. Allow adding a border to an element by just adding a border-width. (https://github.com/tailwindcss/tailwindcss/pull/116)
 */
 
+.body {
+  background-color: black;
+}
+
 *,
 ::before,
 ::after {
